# rl_game_of_life

./: .gitignore  CMakeLists.txt  Makefile  README.md
shader/: gol_shader.glsl  view_shader.glsl
src/: main.c
